tests/purs/passing/3429/08.purs
module Mod8 where

class C a where
  c :: Int -> a

instance cInt :: C Int where
  c i = c i
